# haskell-practices

./: .gitignore  Locker.hs  Memoization.hs  MonadT.hs  Person.hs  README.md  RPN.hs  ReaderMonad.hs  Shapes.hs  SudokuSolver.hs  Tree.hs  baby.hs  funcs.hs  higherOrderFunctions.hs  recursion.hs  reverseWords.hs  stack.yaml
Servants/FirstServant/: FirstServant.cabal
Servants/FirstServant/app/: Main.hs
Servants/FirstServant/src/: .Main.hs.swp
StackPlayground/: StackPlayground.cabal
StackPlayground/app/: Main.hs
mtl-example/: mtl-example.cabal
mtl-example/src/: Lib.hs  Lib2.hs  MaybeT.hs  MaybeTParse.hs  StackStack.hs
